# trellis

./: .gitignore  .vercelignore  404.html  AGENTS.md  Cargo.toml  README.md  build-site.mjs  index.html  package-lock.json  package.json  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
adr/: index.html
animations/: index.html
assets/: animations.css  base.css  components.css  flight-recorder-ledger.css  flight-recorder.css  landing.css  landing.js  layout.css  leak-duel-ledger.css  leak-duel-proof.css  leak-duel-responsive.css  leak-duel.css  (+2 more)
crates/trellis-bench/: Cargo.toml
crates/trellis-bench/benches/: performance_smoke.rs
crates/trellis-bench/src/: lib.rs  smoke.rs  smoke_collections.rs
crates/trellis-core/: Cargo.toml  README.md
crates/trellis-core/src/: audit.rs  audit_history.rs  audit_types.rs  collection.rs  collection_build.rs  collection_diff.rs  collection_recompute.rs  collection_storage.rs  debug.rs  dependency.rs  dependency_validate.rs  derive.rs  error.rs  graph.rs  graph_support.rs  host_status.rs  ids.rs  input.rs  label_audit.rs  labels.rs  lib.rs  model.rs  node.rs  oracle.rs  output.rs  output_build.rs  output_frame.rs  output_payload.rs  output_reconcile.rs  read.rs  resource.rs  resource_build.rs  resource_key.rs  resource_reconcile.rs  resource_reconcile_aggregate.rs  resource_reconcile_apply.rs  scope.rs  scope_lifecycle.rs  topology.rs  trace.rs  (+4 more)
crates/trellis-core/tests/: audit_causes.rs  audit_history.rs  audit_observability.rs  audit_retention.rs  collection_boundaries.rs  collections.rs  debug_dump.rs  dependencies.rs  derived.rs  derived_failures.rs  error_status.rs  host_status_classification.rs  identity.rs  label_registry.rs  materialized_outputs.rs  oracle_model.rs  resource_keys.rs  resource_open_close_planner.rs  resource_plan_boundaries.rs  resource_plans.rs  resource_reconcile_semantics.rs  resource_shared_handoff.rs  scope_reclamation.rs  scope_teardown.rs  scopes.rs  thread_safety.rs  transaction_phases.rs  transaction_trace.rs  transactions.rs
crates/trellis-examples/: Cargo.toml
crates/trellis-examples/examples/: collab_canvas.rs  control_plane_lite.rs  fleetpulse.rs  market_desk.rs  mini_language_server.rs  photo_stream.rs  pipeline_lab.rs  plugin_host.rs  search_ops.rs  workspace_sync_board.rs
crates/trellis-examples/examples/support/: mod.rs
crates/trellis-examples/src/: internal_alpha.rs  lib.rs  mini_language_server.rs  protocol_subscription.rs  seeded_bugs.rs  showcase_trace.rs  telemetry_dashboard.rs  workspace_sync.rs
crates/trellis-examples/src/collab_canvas/: bug_capsules.rs  engine.rs  graph.rs  mod.rs  sample.rs  scripts.rs  tests.rs  types.rs
crates/trellis-examples/src/control_plane_lite/: bug_capsules.rs  engine.rs  frames.rs  graph.rs  mod.rs  sample.rs  scripts.rs  selectors.rs  tests.rs  types.rs
crates/trellis-examples/src/fleetpulse/: bug_capsule_paths.rs  bug_capsules.rs  engine.rs  graph.rs  mod.rs  result.rs  sample.rs  scripts.rs  selectors.rs  status.rs  status_runtime.rs  tests.rs  types.rs
crates/trellis-examples/src/internal_alpha/: alpha_tests.rs  shared_resource.rs
crates/trellis-examples/src/market_desk/: bug_capsules.rs  engine.rs  graph.rs  mod.rs  sample.rs  scripts.rs  tests.rs  types.rs
crates/trellis-examples/src/photo_stream/: bug_capsules.rs  engine.rs  graph.rs  mod.rs  sample.rs  scripts.rs  tests.rs  types.rs
crates/trellis-examples/src/pipeline_lab/: bug_capsules.rs  engine.rs  frames.rs  graph.rs  mod.rs  sample.rs  scripts.rs  selectors.rs  tests.rs  types.rs
crates/trellis-examples/src/plugin_host/: bug_capsules.rs  engine.rs  graph.rs  mod.rs  sample.rs  scripts.rs  tests.rs  types.rs
crates/trellis-examples/src/protocol_subscription/: engine.rs  shape.rs  tests.rs  types.rs
crates/trellis-examples/src/search_ops/: bug_capsules.rs  engine.rs  graph.rs  mod.rs  sample.rs  scripts.rs  selectors.rs  tests.rs  types.rs
crates/trellis-examples/src/workspace_sync_board/: bug_capsule_paths.rs  bug_capsules.rs  engine.rs  graph.rs  mod.rs  sample.rs  scripts.rs  tests.rs  types.rs
crates/trellis-examples/tests/: showcase_traces.rs
crates/trellis-observatory-engine/: Cargo.toml
crates/trellis-observatory-engine/examples/: eval_capsules.rs
crates/trellis-observatory-engine/src/: actions.rs  bugs.rs  compute.rs  core_projection.rs  core_runtime.rs  engine.rs  eval.rs  invariants.rs  language.rs  leak_duel.rs  leak_duel_present.rs  leak_duel_sim.rs  ledger.rs  lib.rs  replay.rs  seed.rs  types.rs
crates/trellis-observatory-engine/tests/: eval_capsules.rs  scenarios.rs
crates/trellis-testing/: Cargo.toml  README.md
crates/trellis-testing/src/: audit.rs  conformance.rs  harness.rs  harness_step.rs  host.rs  host_conformance.rs  host_status.rs  lib.rs  oracle.rs  output_ledger.rs  output_ledger_dump.rs  proptest.rs  resource_assertions.rs  resource_error.rs  resource_ledger.rs  resource_ledger_dump.rs  resource_state.rs  scenario.rs  scenario_redaction.rs  script.rs  serialized.rs
crates/trellis-testing/src/conformance/: runner.rs
crates/trellis-testing/src/proptest/: sequence.rs
crates/trellis-testing/tests/: compile_fail.rs  conformance.rs  flight_recorder_fixtures.rs  generated_graph_proptest.rs  harness.rs  host_conformance.rs  output_audit_ledger.rs  proptest_helpers.rs  redaction.rs  release_gate.rs  resource_host_ledger.rs  serialized_replay.rs
crates/trellis-testing/tests/fixtures/: serialized_trace_v1.json  serialized_trace_v2.json  serialized_trace_v3.json  serialized_trace_v4.json
crates/trellis-testing/tests/ui/: input_type_mismatch.rs  input_type_mismatch.stderr
fuzz/: Cargo.toml
fuzz/fuzz_targets/: resource_lifecycle.rs  scalar_support.rs  support.rs  trace_replay.rs
(+478 files in other folders)
