[workspace]
members = [
    "crates/trellis-adapter",
    "crates/trellis-bench",
    "crates/trellis-core",
    "crates/trellis-examples",
    "crates/trellis-observatory-engine",
    "crates/trellis-testing",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pablof7z/trellis"
