[package]
name = "trellis-bench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Benchmark smoke harness for Trellis."

[dependencies]
trellis-core = { path = "../trellis-core" }

[[bench]]
name = "performance_smoke"
harness = false
