[package]
name = "trellis-core"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Deterministic reactive resource graph core types."
readme = "README.md"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
