[package]
name = "trellis-core"
version = "0.2.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Deterministic reconciler: state changes in; resource commands, output frames, and auditable receipts out."
readme = "README.md"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
