[package]
name = "trellis-examples"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Proof examples for Trellis graph shapes."

[dependencies]
trellis-core = { version = "0.2.0", path = "../trellis-core" }

[dev-dependencies]
trellis-testing = { path = "../trellis-testing" }
