[package]
name = "trellis-examples"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Proof examples for Trellis graph shapes."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
trellis-core = { version = "0.2.1", path = "../trellis-core", features = ["serde"] }

[dev-dependencies]
trellis-testing = { path = "../trellis-testing" }
