[package]
name = "trellis-observatory-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust/WASM deterministic engine for the Codebase Observatory showcase."
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
