[package]
name = "trellis-testing"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Companion testing support for Trellis graph invariants."

[features]
default = []
fuzz = []
insta = ["dep:insta"]
proptest = ["dep:proptest"]
serde = []
trybuild = []

[dependencies]
insta = { version = "1", optional = true }
proptest = { version = "1", optional = true }
trellis-core = { version = "0.1.0", path = "../trellis-core" }

[dev-dependencies]
trybuild = "1"
