[package]
name = "trellis-testing"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Companion testing support for Trellis graph invariants."
readme = "README.md"

[features]
default = []
fuzz = []
insta = ["dep:insta"]
proptest = ["dep:proptest"]
serde = ["trellis-core/serde"]
trybuild = []

[dependencies]
insta = { version = "1", optional = true }
proptest = { version = "1", optional = true }
trellis-core = { version = "0.1.1", path = "../trellis-core" }

[dev-dependencies]
trybuild = "1"
