[package]
name = "trellis-testing"
version = "0.2.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Companion testing support for Trellis graph invariants."
readme = "README.md"

[features]
default = []
fuzz = []
insta = ["dep:insta"]
proptest = ["dep:proptest"]
serde = ["dep:serde", "dep:serde_json", "trellis-core/serde"]
trybuild = []

[dependencies]
insta = { version = "1", optional = true }
proptest = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
trellis-core = { version = "0.2.1", path = "../trellis-core" }

[dev-dependencies]
trybuild = "1"
